<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Query_Labs_Prototype</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum_short">Lorem Ipsum</string>
    <string name="lorem_ipsum_full" tools:ignore="ExtraTranslation">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="Like">14 Suka</string>
    <string name="Comment">1 Komentar</string>
    <string name="Share">0 Bagikan</string>
    <string name="suka">SUKA</string>
    <string name="komentari">KOMENTAR</string>
    <string name="bagikan">BAGIKAN</string>

    <string-array name="informasi_obat">
        <item>0,9% SODIUM CHLORIDE</item>
        <item>3 TC</item>
        <item>3 TC-HBV</item>
        <item>4-EPEEDO-50</item>
        <item>5% DEXTROSE</item>
        <item>50 D</item>
        <item>8Y</item>
        <item>A-B VASK 10</item>
        <item>A-B VASK 5</item>
        <item>A-BE</item>
        <item>AAFACT 1000 IU</item>
        <item>AAFACT 500 IU</item>
        <item>ABAJOS</item>
        <item>ABBOTIC</item>
        <item>ABBOTIC XL</item>
        <item>ABILIFY</item>
        <item>ABILIFY DISCMELT</item>
        <item>ABINGEM 1000</item>
    </string-array>

</resources>
